[metadata]
name = pybluedot
version = 0.0.1
summary = MegaAwesome
description-file =
    README.md
author = Commitmas 2016
author-email = megaawesome@lists.megaawesome.org
home-page = https://github.com/commitmas/pybluedot
classifier =
    Environment :: MegaAwesome
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[entry_points]
console_scripts =
    bdot = pybluedot.cli:main
